--- a/.gitignore
+++ b/.gitignore
@@ -10,7 +10,8 @@
 
 # next.js
 /.next/
-/out/
+# The `out` directory should not be ignored by version control -- TO MAKE IT WORK WITH STATIC PAGES
+# /out/
 
 # production
 /build
